# raylib_boilerplate

./: .gitmodules  CMakeLists.txt  README.md  configure.bat  main.cpp
cmake/: box2d.cmake  raylib.cmake
game/: CMakeLists.txt
game/src/: game.cpp
